[package]
name = "pile"
version = "0.1.0"
authors = ["Eli Adelhult"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
structopt = "0.3"
open = "*"


[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]